--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,68 +1,4 @@
-<div class="app-container">
-
-  <p>
-    <mat-toolbar class="mat-elevation-z6" color="primary" fxLayout="row" fxLayoutAlign="space-between center">
-      
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <span>Hopper Application</span>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="end center">
-        <button mat-icon-button (click)="onSwitchThemeMode()">
-          <mat-icon mat-icon-button *ngIf="!isDarkMode()">dark_mode</mat-icon>
-          <mat-icon mat-icon-button *ngIf="isDarkMode()">light_mode</mat-icon>
-        </button>
-  
-        <button mat-button [matMenuTriggerFor]="menu">
-          <mat-icon class="mr-8" svgIcon="flag_{{ currentLang }}"></mat-icon>
-          <span>{{ currentLang | uppercase }}</span>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item *ngFor="let language of languages" (click)="onSetCurrentLang(language)">
-            <mat-icon svgIcon="flag_{{ language }}"></mat-icon>
-            <span>{{ language | uppercase }}</span>
-          </button>
-        </mat-menu>
-      </div>
-
-    </mat-toolbar>
-  </p>
-
-  <hopper-event-button></hopper-event-button>
-
-  <hr>
-
-  <div class="buttons-container">
-    <button mat-flat-button color="primary" (click)="onOpenCfarContractDialog()">Open CFAR Contract dialog</button>
-    <button mat-flat-button color="primary" (click)="onOpenCfarExerciseDialog()">Open CFAR Exercise dialog</button>
-  </div>
-
-  <hr>
-
-  <div class="cfar-contract-choice-container">
-    <h3>CFAR contract choice</h3>
-  
-    <div class="hopper-theme-blue">
-      <hopper-cfar-contract-choice
-        [currentLang]="currentLang"
-        [partnerId]="partnerId"
-        [hCSessionId]="hCSessionId"
-        [originAirport]="originAirport"
-        [destinationAirport]="destinationAirport"
-        [departureDateTime]="departureDateTime"
-        [arrivalDateTime]="arrivalDateTime"
-        [flightNumber]="flightNumber"
-        [carrierCode]="carrierCode"
-        [fareClass]="fareClass"
-        [currency]="currency"
-        [totalPrice]="totalPrice"
-        [passengers]="passengers"
-        [ancillaryPrice]="ancillaryPrice"
-        [ancillaryType]="ancillaryType"
-        [bookingDateTime]="bookingDateTime"
-        (emitSubmit)="onEmitSubmitCfarContractChoice($event)"
-    ></hopper-cfar-contract-choice>
-    </div>
-  </div>
-
+<div class="{{ currentTheme }} main-container" fxLayout="column" fxLayoutAlign="start stretch">
+  <app-navbar fxFlex="64px" class="mat-elevation-z6"></app-navbar>
+  <router-outlet></router-outlet>
 </div>
