Documentation text + fake backend feature

--- a/src/app/pages/guides/cfar-contract-choice/cfar-contract-choice.component.html
+++ b/src/app/pages/guides/cfar-contract-choice/cfar-contract-choice.component.html
@@ -12,6 +12,7 @@
         <mat-tab label="Overview">
             <div class="p-16">
                 <hopper-cfar-contract-choice
+                    [isFakeBackend]="isFakeBackend"
                     [currentLang]="currentLang"
                     [partnerId]="partnerId"
                     [hCSessionId]="hCSessionId"
