add proxy service + basePath management

--- a/src/app/pages/guides/cfar-contract-choice/cfar-contract-choice.component.html
+++ b/src/app/pages/guides/cfar-contract-choice/cfar-contract-choice.component.html
@@ -13,6 +13,7 @@
             <div class="p-16">
                 <hopper-cfar-contract-choice
                     [isFakeBackend]="isFakeBackend"
+                    [basePath]="basePath"
                     [currentLang]="currentLang"
                     [partnerId]="partnerId"
                     [hCSessionId]="hCSessionId"
