--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-contract-choice/cfar-contract-choice.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-contract-choice/cfar-contract-choice.component.html
@@ -19,9 +19,9 @@
                 <div fxFlexOffset="112px" fxFlexOffset.lt-md="104px" fxFlexOffset.lt-sm="0px"
                     fxFlex fxLayout="row wrap" fxLayoutAlign="start center">
     
-                    <div fxFlex="100" class="py-16" *ngFor="let rule of rules" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+                    <div fxFlex="100" class="py-16" *ngFor="let desc of offer?.offerDescription" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
                         <mat-icon class="fat-icon" color="primary">check</mat-icon>
-                        <span>[{{ rule }}]</span>
+                        <span>{{ desc }}</span>
                     </div>
             
                     <div fxFlex="100" fxLayoutAlign="end center">
