--- a/src/app/shared/components/inputs/inputs.component.html
+++ b/src/app/shared/components/inputs/inputs.component.html
@@ -17,7 +17,10 @@
     
         <ng-container matColumnDef="required">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Required</th>
-            <td mat-cell *matCellDef="let element">{{ element.required }}</td>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon *ngIf="element.required" class="required-icon">done</mat-icon>
+                <mat-icon *ngIf="!element.required" class="optional-icon">close</mat-icon>
+            </td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedInputsColumns"></tr>
