--- a/src/app/shared/components/inputs/inputs.component.scss
+++ b/src/app/shared/components/inputs/inputs.component.scss
@@ -25,6 +25,17 @@
 
     app-inputs {
 
-        // TODO
+        .required-icon {
+            color: green;
+        }
+
+        .optional-icon {
+            color: red;
+        }
+
+        .mat-header-row {
+            background-color: map-get($primary-palette, 500);
+            color: map-get($primary-palette, "500-contrast");
+        }
     }
 }
