--- a/src/app/shared/components/outputs/outputs.component.scss
+++ b/src/app/shared/components/outputs/outputs.component.scss
@@ -25,6 +25,9 @@
 
     app-outputs {
 
-        // TODO
+        .mat-header-row {
+            background-color: map-get($primary-palette, 500);
+            color: map-get($primary-palette, "500-contrast");
+        }
     }
 }
