--- a/src/app/pages/guides/cfar-contract-choice/cfar-contract-choice.component.html
+++ b/src/app/pages/guides/cfar-contract-choice/cfar-contract-choice.component.html
@@ -17,19 +17,10 @@
                     [currentLang]="currentLang"
                     [partnerId]="partnerId"
                     [hCSessionId]="hCSessionId"
-                    [originAirport]="originAirport"
-                    [destinationAirport]="destinationAirport"
-                    [departureDateTime]="departureDateTime"
-                    [arrivalDateTime]="arrivalDateTime"
-                    [flightNumber]="flightNumber"
-                    [carrierCode]="carrierCode"
-                    [fareClass]="fareClass"
-                    [currency]="currency"
-                    [totalPrice]="totalPrice"
-                    [passengers]="passengers"
-                    [ancillaryPrice]="ancillaryPrice"
-                    [ancillaryType]="ancillaryType"
+                    [paymentType]="paymentType"
+                    [itinerary]="itinerary"
                     [bookingDateTime]="bookingDateTime"
+                    [extAttributes]="extAttributes"
                     (emitSubmit)="onEmitSubmitCfarContractChoice($event)"
                 ></hopper-cfar-contract-choice>
             </div>
