--- a/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -1,11 +1,7 @@
 <div class="cfar-exercise-dialog-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
 
-    <p fxFlex="100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-        it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
-        including versions of Lorem Ipsum.</p>
+    <p fxFlex="100">This page is displayed to the User following the successful retrieval of a CFAR contract for a booking eligible to the refund.
+        The User gets a display of the booking’s itinerary that can be cancelled and is prompted to choose the refund type.</p>
 
     <mat-tab-group fxFlex="100" backgroundColor="primary" class="tab-group mb-16">
 
