guide page + fix i18n + upgrade version

--- a/src/app/pages/guides/guides.component.html
+++ b/src/app/pages/guides/guides.component.html
@@ -1,10 +1,26 @@
 <div class="guides-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
 
-    <p fxFlex="100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-        it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
-        including versions of Lorem Ipsum.</p>
+    <h2 fxFlex="100">
+        Hopper Cloud Airlines Angular SDK offers a wide variety of UI components based on
+        <a href="https://material.io/components">the Material Design specification</a>
+    </h2>
+
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="16px">
+
+        <mat-card class="m-16" *ngFor="let component of components" [routerLink]="component?.link">
+            
+            <img mat-card-image src="/assets/miniatures/{{ component?.link }}.png" alt="{{ component?.name }} miniature">
+            
+            <mat-card-header>
+              <mat-card-title>{{ component?.name }}</mat-card-title>
+            </mat-card-header>
+            
+            <mat-card-content>
+              <p>{{ component?.description }}</p>
+            </mat-card-content>
+          </mat-card>
+          
+
+    </div>
 
 </div>
