--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
@@ -10,7 +10,7 @@
     
                 <div fxFlex="calc(100% - 112px)" fxFlex.lt-md="calc(100% - 104px)" fxFlex.lt-sm="calc(100% - 48px)" 
                     fxLayout="row wrap" fxLayoutAlign="start center">
-                    <h2 class="offer-title">{{ 'CFAR_CONTRACT_CHOICE.TITLE' | translate }}</h2>
+                    <h2 class="offer-title">{{ 'CFAR_OFFER_BANNER.TITLE' | translate }}</h2>
                 </div>
             </div>
     
@@ -29,7 +29,7 @@
             
                     <div fxFlex="100" fxLayoutAlign="end center">
                         <button mat-stroked-button color="primary" (click)="onSubmit(offer)">
-                            {{ 'CFAR_CONTRACT_CHOICE.PRICE' | translate: { price : (offer?.premium | currency:offer?.currency:'symbol':undefined:currentLang) } }}
+                            {{ 'CFAR_OFFER_BANNER.PRICE' | translate: { price : (offer?.premium | currency:offer?.currency:'symbol':undefined:currentLang) } }}
                         </button>
                     </div>
         
@@ -40,13 +40,13 @@
         </mat-card>
 
         <ng-container *ngIf="!cfarOffers || cfarOffers?.length == 0">
-            <p>{{ 'CFAR_CONTRACT_CHOICE.NO_OFFERS' | translate }}</p>
+            <p>{{ 'CFAR_OFFER_BANNER.NO_OFFERS' | translate }}</p>
         </ng-container>
     </ng-container>
 
     <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" *ngIf="isLoading">
         <mat-spinner></mat-spinner>
-        <p>{{ 'CFAR_CONTRACT_CHOICE.LOADING' | translate }}</p>
+        <p>{{ 'CFAR_OFFER_BANNER.LOADING' | translate }}</p>
     </div>
 
 </div>
