--- a/src/app/pages/guides/guides.component.scss
+++ b/src/app/pages/guides/guides.component.scss
@@ -23,7 +23,19 @@
 
     app-guides-page {
         .guides-page-container {
+            mat-card {
+                max-width: 300px;
+                background-color: map-get($accent-palette, default);
+                color: map-get($accent-palette, "default-contrast");
 
+                &:hover {
+                    @include mat.elevation(6);
+                }
+
+                &.active {
+                    border: 2px solid map-get($primary-palette, default);
+                }
+            }
         }
     }
 }
